# bcs-proof-of-concept

./: .dockerignore  .gitignore  .gitleaksignore  Dockerfile  NOTES.md  README.md  sample_factuur.xlsx  sample_kwartaalcijfers.xlsx  sample_medewerkers.xlsx  sample_signalen.xlsx
.github/workflows/: bcs-demo.yml
backend/: config.py  generate_comparison_tables.py  generate_test_tables.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/routers/: controle_series.py  controles.py  extract.py  global_values.py  klanten.py  pdfs.py  spreadsheets.py  templates.py  test_runs.py  translation_rules.py
backend/services/: chain_engine.py  controle_series_store.py  controle_store.py  extraction_service.py  formula_engine.py  global_value_store.py  global_value_template_store.py  klant_store.py  pdf_service.py  rule_engine.py  storage_backend.py  template_store.py  test_run_store.py  translation_rules_store.py
backend/storage/templates/: 07cae288-024d-4def-8052-15ebf92c9e1c.json  32b39fc9-e7ee-459a-9e9b-d5f4912dcd4f.json
docker/: docker-compose.yml
docs/: BUSINESS_LOGIC.md
docs/superpowers/plans/: 2026-04-07-controle-series.md  2026-04-07-global-values.md  2026-04-07-klanten.md  2026-04-07-polaris-node.md  2026-04-07-spreadsheet-support.md  2026-04-08-bulk-file-upload.md  2026-04-08-custom-script-node.md  2026-04-08-nested-klanten.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
infra/: Pulumi.demo.yaml  Pulumi.yaml  __main__.py  requirements.txt
infra/environments/: demo.py
(+92 files in other folders)
