[project]
name = "bcs-backend"
version = "0.1.0"
description = "PDF template-based data extraction backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pdfplumber>=0.11.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "routers", "services"]
